--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.20.2",
+    "@auth0/nextjs-auth0": "^4.6.1",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -40,7 +40,6 @@
     "react-hook-form": "^7.57.0",
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.5",
-    "svix": "^1.66.0",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.48"
