--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "airtable": "^0.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "googleapis": "^150.0.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.5",
